--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "author": "Andrew Brown",
-  "name": "darwin",
+  "name": "@darwin/monorepo",
   "version": "0.0.0",
   "private": true,
   "workspaces": [
     "packages/*"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lindystack/darwin"
+  },
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
@@ -14,11 +18,11 @@
     "test": "turbo run test"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.1",
     "turbo": "latest"
   },
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
   "packageManager": "pnpm@7.30.0"
 }
