--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -33,5 +33,8 @@
     "tsconfig": "workspace:*",
     "typescript": "^4.5.2",
     "vitest": "^0.29.3"
+  },
+  "publish": {
+    "access": "public"
   }
 }
