--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -37,5 +37,8 @@
     "microbundle": "^0.15.1",
     "typescript": "^4.5.2",
     "vitest": "^0.29.3"
+  },
+  "publish": {
+    "access": "public"
   }
 }
