--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -20,6 +20,10 @@
   "files": [
     "dist/**/*"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lindystack/darwin"
+  },
   "scripts": {
     "build": "microbundle",
     "test": "vitest",
