--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -20,6 +20,10 @@
   "files": [
     "dist/**/*"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lindystack/darwin"
+  },
   "scripts": {
     "build": "microbundle",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
