--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -22,7 +22,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/lindystack/darwin"
+    "url": "git+https://github.com/lindystack/darwin.git"
   },
   "scripts": {
     "build": "microbundle",
