--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dev": "turbo run dev",
     "lint": "rome check ./packages/select/src ./packages/schema/src",
     "format": "rome format ./packages",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "changeset": "changeset",
+    "publish": "pnpm build && changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
